--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ Carthage/Build
 
 # fastlane
 #
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the 
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://github.com/fastlane/fastlane/blob/master/docs/Gitignore.md
@@ -59,3 +59,6 @@ node_modules/
 
 #Ruby Gems
 vendor/
+
+#Log Files
+logs
