--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,4 +2,9 @@ platform :ios, '8.0'
 use_frameworks!
 
 pod 'OpenTok', '~> 2.7'
-pod 'SnapKit'
+pod 'SnapKit', '~> 0.19'
+
+target 'UnitTests' do
+  pod 'Quick', '~> 0.9.0'
+  pod 'Nimble', '3.0.0'
+end
